# BackendFutbol

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTACION_MENOR_EDAD.md  PLAN_INTEGRACION_AUTH.md  README.md  REGISTRO_MENORES_DOC.md  TESTING_GUIDE_HS004.md  TESTING_STATUS_HS004.md  azure-deploy.yaml  conftest.py  docker-compose-azure.yml  docker-compose.yml  et --soft HEAD~1  main.py  prueba.py  pyproject.toml  safety_report.json  safety_report.txt  seed_demo_users.py  sonar-project.properties
.github/workflows/: create-feature-branch.yml  deploy-aci.yml  deploy-azure.yml  deploy-container-apps.yml  fastapi-ci.yml  production-ci.yml  staging-ci.yml  tests.yml
.scannerwork/: report-task.txt
app/client/: person_auth.py  person_client.py  person_ms_service.py
app/controllers/: account_controller.py  athlete_controller.py  attendance_controller.py  endurance_test_controller.py  evaluation_controller.py  evaluator_controller.py  report_controller.py  representative_controller.py  sprint_test_controller.py  statistic_controller.py  technical_assessment_controller.py  test_controller.py  user_controller.py  yoyo_test_controller.py
app/core/: auth.py  config.py  database.py  docs.py  exception_handlers.py  scalar_docs.py  security.py  seeder.py
app/dao/: account_dao.py  athlete_dao.py  attendance_dao.py  base.py  endurance_test_dao.py  evaluation_dao.py  evaluator_dao.py  report_dao.py  representative_dao.py  sprint_test_dao.py  statistic_dao.py  (+4 more)
reports/: pytest-report.xml
scripts/: init_test_db.py  migrate_data.py
tests/: conftest.py  test_account_controler.py  test_account_router.py  test_athlete_registration.py  test_athlete_schema_validations.py  test_exception_handlers.py  test_main.py  test_minor_athlete_registration.py  test_person_client.py  test_person_ms_service.py
(+117 files in other folders)
