[project]
name = "backendfutbol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "reportlab>=4.2.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "weasyprint>=67.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
]
[tool.watchfiles]
ignore = ["**/__pycache__/**"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:'HTTP_422_UNPROCESSABLE_ENTITY' is deprecated"
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
[tool.ruff]
line-length = 88 # El estándar de Python
target-version = "py311"

[tool.ruff.lint]
# E (Errores pycodestyle), F (Pyflakes), I (Isort - ordenar imports), B (Bugbear)
select = ["E", "F", "I", "B"]
ignore = ["B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]
